--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>North Shore Surf Spot Quiz</title>
 </head>
 <body>
 	<script src="prompt_quiz.js"></script>
-
+<p>Respond with the correct surf spot answers starting from south to north, receive one point for each correct answer</p>
 </body>
 </html>
